--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
   "port": 5432,
   "username": "eddie",
   "password": "eddie",
-  "database": "typegrahpql_testing",
+  "database": "media_scraper_testing",
   "logging": true,
   "synchronize": true,
   "entities": ["src/entity/**/*.*"],
