Add a few scripts for testing puppeteer

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ioredis": "^4.9.0",
     "nodemailer": "^6.0.0",
     "pg": "^7.9.0",
+    "puppeteer": "^1.17.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.1",
     "typeorm": "^0.2.16",
@@ -34,6 +35,7 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^11.12.2",
     "@types/nodemailer": "^4.6.7",
+    "@types/puppeteer": "^1.12.4",
     "@types/uuid": "^3.4.4",
     "casual": "^1.6.0",
     "chalk": "^2.4.2",
@@ -47,6 +49,9 @@
   "scripts": {
     "start": "ts-node -r dotenv/config src/index.ts",
     "dev": "nodemon -r dotenv/config --exec ts-node src/index.ts",
+    "tpup": "ts-node example/puptest.ts",
+    "tpupm": "ts-node example/puptest_multiple.ts",
+    "puptest": "node example/old/puptest.js",
     "tsndev": "ts-node-dev --respawn src/index.ts",
     "db:setup": "ts-node ./src/test-utils/setup.ts",
     "test": "npm run db:setup && TERM=dumb jest --detectOpenHandles",
