Add podcast library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#5E081E",
-        "titleBar.activeBackground": "#840C2A",
-        "titleBar.activeForeground": "#FFFCFC"
-    }
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#0f1174",
+    "titleBar.activeBackground": "#0f1174",
+    "titleBar.activeForeground": "#FFFCFC"
+  }
 }
