Add GetAllPodcastEpisodes query

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#0f1174",
+    "activityBar.background": "#FFFCFC",
     "titleBar.activeBackground": "#0f1174",
     "titleBar.activeForeground": "#FFFCFC"
   }
