--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.6",
     "graphql": "^14.2.0",
     "graphql-query-complexity": "^0.2.3",
+    "internal-ip": "^4.3.0",
     "ioredis": "^4.9.0",
     "nodemailer": "^6.0.0",
     "pg": "^7.9.0",
