--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^11.12.2",
     "@types/nodemailer": "^4.6.7",
     "@types/puppeteer": "^1.12.4",
+    "@types/request": "^2.48.1",
     "@types/uuid": "^3.4.4",
     "casual": "^1.6.0",
     "chalk": "^2.4.2",
@@ -52,6 +53,7 @@
     "start": "ts-node -r dotenv/config src/index.ts",
     "dev": "nodemon -r dotenv/config --exec ts-node src/index.ts",
     "tpup": "ts-node example/puptest.ts",
+    "taudio": "ts-node example/download-audio.ts",
     "tpupm": "ts-node example/puptest_multiple.ts",
     "puptest": "node example/old/puptest.js",
     "tsndev": "ts-node-dev --respawn src/index.ts",
