--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "composite": false,
     "removeComments": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
